made changes to the About me section ''

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                             experience has been in Aviation and Aerospace along with some work
                             experience in Finance. My educational background has mostly been in
                             Avaiation and Business.I have achieved a Bachelors of Science in
-                            "Aviation & Aerospace".
+                            "Aviation & Aerospace". Although I enjoy flying and many different aircrafts.
+                            I have always enjoyed the internet and always wondered how it operates. With 
+                            this curiosity I have made the decision to pursue the software and tech industry.
                         </p>
                     </article>
 
