final push before portfolio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
             <a href="#About Me">AboutMe</a>
             <a href="#Work">Work</a>
-            <a href="#Contact Information">Contact Information</a>
+            <a href="#ContactInformation">Contact Information</a>
             </nav>
 
             <main>
@@ -37,7 +37,8 @@
                         </p>
                     </article>
 
-                <section id="Work" class="grid-container">
+                <section id="Work">
+                <section class="container">
                     <h3><span class="work">Work</span></h3>
 
                         <nav class="large-box">
