pushing updates in the html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
         <body>
             <header>
-            <h1>Edgar Calderon's Profile</h1>
+            <h1>Edgar Calderon's Portfolio</h1>
             <img
-            src="https://www.facebook.com/profile/pic.php?cuid=AYh6mlV3hIcXCE_hU46KmZCTUeUYTyZ7o22_s5YWsescmM0RgGWw9KldA-JrcLIEYCE0ch-JE40oUvKVcBvEp8HgkPL6p_i2VWNhSZrlzJCiq6MBeWkTCxwc6Pb3zWYvY68XgLafjKH7jfijvjBP9IdoqTn7nudOk6IS1lLB0BOsVauu7PQ3e0foQPFHeea9jx5qpavqY6qOB5esm3Fsg9dTRwL62GHLniAbS-_fyIvDxQ&square_px=64"alt=""Image
+            src="https://media-exp1.licdn.com/dms/image/C5603AQFP-F-ZRTdKnw/profile-displayphoto-shrink_800_800/0/1615822846193?e=1632960000&v=beta&t=joVVK-V6EHpUhyaRmOJopUMPxx6GuXwXzBoPoSF-5Ic"alt=""Image
             of Edgar Calderon in a suit and tie"
             </header>
 
