updating bugs in Html

--- a/index.html
+++ b/index.html
@@ -37,31 +37,34 @@
                         </p>
                     </article>
 
-                <section id="Work">
-                <section class="container">
+            <section id="Work">
+            <section class="container">
                     <h3><span class="work">Work</span></h3>
-
+                    <section>
                         <nav class="large-box">
                             <div>
                         <a href="https://www.google.com/" target="_blank">
                         <span> Calculator</span>
-                        
+                    </section> 
+                    <section>  
                         <nav class="large-box">
                             <div>
                         <a href="https://www.google.com/" target="_blank">
                         <span>Repositories</span>
-
-
+                    </section>
+                    <section>
                         <nav class="large-box">
                             <div>
                         <a href="https://www.google.com/" target="_blank">
                         <span>Websites</span>
-
-                        <nav class="large-box">
+                        </nav>
+                    </section>
+                    <nav class="large-box">
                             <div>
                         <a href="https://www.google.com/" target="_blank">
-                        <span>Puzzle</span>
-                </article>
+                        <span>Game</span>
+                    </section>
+            </section>
             </section>
         </main>
 
