--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
             <header>
             <h1>Edgar Calderon's Portfolio</h1>
             <img
-            src="https://media-exp1.licdn.com/dms/image/C5603AQFP-F-ZRTdKnw/profile-displayphoto-shrink_800_800/0/1615822846193?e=1632960000&v=beta&t=joVVK-V6EHpUhyaRmOJopUMPxx6GuXwXzBoPoSF-5Ic"alt=""Image
+            src="./assets/images/HeadShot 2020 copy.jpeg"alt=""Image
             of Edgar Calderon in a suit and tie"
             </header>
 
             <nav>
-            <a href="#About Me">AboutMe</a>
+            <a href="#About Me">About Me</a>
             <a href="#Work">Work</a>
-            <a href="#ContactInformation">Contact Information</a>
+            <a href="#Links">Contact Information</a>
             </nav>
 
             <main>
-            <h2>About Me</h2>
+            <section id = "About Me"></section>
                 <section>
+                    <h3>About Me</h3>
+
                     <article>
                         <p>
                             My name is Edgar Calderon I am from Denver,Colorado. I am currently on
@@ -31,58 +33,67 @@
                             experience has been in Aviation and Aerospace along with some work
                             experience in Finance. My educational background has mostly been in
                             Avaiation and Business.I have achieved a Bachelors of Science in
-                            "Aviation & Aerospace". Although I enjoy flying and many different aircrafts.
+                            "Aviation & Aerospace". Although I enjoy flying and enjoy various different types of aircrafts.
                             I have always enjoyed the internet and always wondered how it operates. With 
                             this curiosity I have made the decision to pursue the software and tech industry.
+                            I am excited with little I have learned and am ready to embark on this life long journey!
                         </p>
                     </article>
 
             <section id="Work">
             <section class="container">
-                    <h3><span class="work">Work</span></h3>
+                    <h3> Work </h3>
                     <section>
                         <nav class="large-box">
                             <div>
-                        <a href="https://www.google.com/" target="_blank">
-                        <span> Calculator</span>
+                        <a href="https://dereklewis.github.io/music-project-main/ " target="_blank">
+                        <span>Lyrific- Music APP</span></a>
                     </section> 
                     <section>  
                         <nav class="large-box">
                             <div>
-                        <a href="https://www.google.com/" target="_blank">
-                        <span>Repositories</span>
+                        <a href="https://ecalderon10.github.io/Calendar/" target="_blank">
+                        <span>Day Scheduler</span></a>
+                        </nav>
                     </section>
                     <section>
                         <nav class="large-box">
                             <div>
-                        <a href="https://www.google.com/" target="_blank">
-                        <span>Websites</span>
+                        <a href="https://github.com/Ecalderon10?tab=repositories" target="_blank">
+                        <span>Github Repositories</span></a>
                         </nav>
                     </section>
                     <nav class="large-box">
                             <div>
-                        <a href="https://www.google.com/" target="_blank">
-                        <span>Game</span>
+                        <a href=" https://ecalderon10.github.io/Time-Intervals/" target="_blank">
+                        <span>Time Intervals</span></a>
+                        </nav>
                     </section>
             </section>
             </section>
         </main>
 
         <footer>
-        <h3>Contact Information</h3>
-            <section id="#Contact Information">
+
+        <h3>Edgars' Links</h3>
+            <section>
+            <nav id="Links">
                 <nav>
                     <a href="https://github.com/Ecalderon10" 
                     target="_blank"
                     >Git Hub</a>
 
-                    <a href="https://www.msn.com/?ocid=mailsignout&pc=U591" 
-                    target="_blank"
-                    >Email</a>
-
                     <a href="https://www.linkedin.com/in/edgar-calderon-14876815b/" 
                     target="_blank"
                     >LinkedIn</a>
+
+                    <a href="https://www.linkedin.com/in/edgar-calderon-14876815b/detail/overlay-view/urn:li:fsd_profileTreasuryMedia:(ACoAACZgoMgBqkLMMASU4RU8J3usRGDF5pYXe3s,1635467610611)/" 
+                    target="_blank"
+                    >Resume</a>
+
+                    <a href="https://www.linkedin.com/in/edgar-calderon-14876815b/detail/contact-info/"
+                    target="_blank"
+                    >Contact Credentials</a>
 
                 </nav>
             </section>
