updates to projects

--- a/index.html
+++ b/index.html
@@ -43,17 +43,24 @@
             <section id="Work">
             <section class="container">
                     <h3> Work </h3>
+                    <section>  
+                        <nav class="large-box">
+                            <div>
+                        <a href="https://teacher-force.herokuapp.com/login" target="_blank">
+                        <span>Teacher-Force Web Application</span></a>
+                        </nav>
+                    </section>
                     <section>
                         <nav class="large-box">
                             <div>
                         <a href="https://dereklewis.github.io/music-project-main/ " target="_blank">
-                        <span>Lyrific- Music APP</span></a>
+                        <span>Lyrific- Music API</span></a>
                     </section> 
-                    <section>  
-                        <nav class="large-box">
+                    <section>
+                    <nav class="large-box">
                             <div>
-                        <a href="https://ecalderon10.github.io/Calendar/" target="_blank">
-                        <span>Day Scheduler</span></a>
+                        <a href=" https://ecalderon10.github.io/Time-Intervals/" target="_blank">
+                        <span>Time Intervals</span></a>
                         </nav>
                     </section>
                     <section>
@@ -61,12 +68,6 @@
                             <div>
                         <a href="https://github.com/Ecalderon10?tab=repositories" target="_blank">
                         <span>Github Repositories</span></a>
-                        </nav>
-                    </section>
-                    <nav class="large-box">
-                            <div>
-                        <a href=" https://ecalderon10.github.io/Time-Intervals/" target="_blank">
-                        <span>Time Intervals</span></a>
                         </nav>
                     </section>
             </section>
