re-sizing images

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
                 <h1>Edgar Calderon's Portfolio</h1>
             </header>
                 <img class = "headShot"
-                src="./assets/images/HeadShot 2020 copy.jpeg"alt=""Image
-                of Edgar Calderon in a suit and tie">
-            
-
+                src="./assets/images/HeadShot 2020 copy.jpeg"alt="Image
+                of Edgar Calderon in a suit and tie" style="width:400px;height:400px;">
             <main>
             <section>
                 <section>
